# go2_mid360_nav

./: CMakeLists.txt  package.xml
config/: gazebo.yaml  initial_joint_positions.yaml  view_robot.rviz
launch/: spawn_gazebo.launch.py
rviz/: robot_with_lidar.rviz
urdf/: go2_with_mid360.xacro
worlds/: empty.world
